# HydrodynamicSynchronization

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
benchmarks/: profile_simulation.py  sync_convergence.py
src/: app.py  arrays.py  cli.py  constants.py  displacement_computation.py  fluid_dynamics_tensors.py  force_computation.py  main.py  render_video.py  sampling.py  simulation.py  visualization.py
src/hydrosync/: arrays.py  displacement_computation.py  fluid_dynamics_tensors.py  force_computation.py  simulation.py
surrogate/: __init__.py  generate_data.py
tests/: arrays_test.py  fluid_dynamics_tensors_test.py  force_computation_test.py  test_arrays.py  test_displacement_computation.py  test_fluid_dynamics_tensors.py  test_force_computation.py  test_sampling.py  test_simulation.py  test_sync_convergence.py  test_visualization.py
tests/test_hydrosync/: test_arrays.py  test_displacement_computation.py  test_fluid_dynamics_tensors.py  test_force_computation.py  test_simulation.py
